AUTH - Create Jwt Token for Login method

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "This needs to be a really long and randomly generated string for security purposes in production"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=datingapp.db"
   },
