SETTING UP FOR PROD - have .NET serve static files and defer to angular routing

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ DatingApp.API/*.db
 
 # Secret Key is in here and should not be checked in for a production app.
 DatingApp.API/appsettings.json
+
+#build files
+wwwroot
